Elcom_beta upgrade 1

--- a/elcom_beta/public/callout.html
+++ b/elcom_beta/public/callout.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--  Core CSS -->
-	<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+	<link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
   
   	<!--  Custom CSS -->
-    <link href="css/custom_css.css" rel="stylesheet">
+    <link href="../css/custom_css.css" rel="stylesheet">
 	
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -96,7 +96,7 @@
 			<div class="col-sm-3">
 				<div class="well">
 				<p>John</p>
-				<img src="dupka.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+				<img src="../dupka.jpg" class="img-circle" height="55" width="55" alt="Avatar">
 				</div>
 			</div>
 			<div class="col-sm-9">
@@ -112,7 +112,7 @@
 			<div class="col-sm-2 well">
 				<div class="thumbnail">
 					<p>Upcoming Events:</p>
-					<img src="dupka.jpg" alt="Paris" width="400" height="300">
+					<img src="../dupka.jpg" alt="Paris" width="400" height="300">
 					<p><strong>Paris</strong></p>
 					<p>Fri. 27 November 2015</p>
 					<button class="btn btn-primary">Info</button>
@@ -190,19 +190,19 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="dupka.jpg" alt="Chania">
+      <img src="../dupka.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="dupka.jpg" alt="Chania">
+      <img src="../dupka.jpg" alt="Chania">
     </div>
 
     <div class="item">
-      <img src="dupka.jpg" alt="Flower">
+      <img src="../dupka.jpg" alt="Flower">
     </div>
 
     <div class="item">
-      <img src="dupka.jpg" alt="Flower">
+      <img src="../dupka.jpg" alt="Flower">
     </div>
   </div>
 
@@ -242,12 +242,12 @@
 		
 </div>
 
-<script src="js/google_maps_cluster_plugin.js"></script>
-<script src="js/google_maps_list_api.js"></script>
-<script src="js/google_maps_plugin.js"></script>
-<script src="js/google_maps_options.js"></script>
-<script src="js/callout_maps.js"></script>
-<script src="js/MapsPlugin.js"></script>
+<script src="../js/google_maps_cluster_plugin.js"></script>
+<script src="../js/google_maps_list_api.js"></script>
+<script src="../js/google_maps_plugin.js"></script>
+<script src="../js/google_maps_options.js"></script>
+<script src="../js/callout_maps.js"></script>
+<script src="../js/MapsPlugin.js"></script>
 
 		
 </body>
