--- a/elcom_beta/public/gmaps_test.html
+++ b/elcom_beta/public/gmaps_test.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  
   	<!--  Custom CSS -->
-    <link href="css/custom_css.css" rel="stylesheet">
+    <link href="../css/custom_css.css" rel="stylesheet">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
