--- a/elcom_beta/public/organize_protest.html
+++ b/elcom_beta/public/organize_protest.html
@@ -139,7 +139,7 @@ $users_register_db = new callouts_database('users_register');
 								<div class="callout callout-type-1">
 									<div class="row zero-margin">
 										<div class="col-xs-1 zero-padding">
-											<img class="img-responsive callout-img" src="dupka.jpg" alt="">
+											<img class="img-responsive callout-img" src="../dupka.jpg" alt="">
 										</div>
 										
 										<div class="col-xs-11 zero-padding">
@@ -177,7 +177,7 @@ $users_register_db = new callouts_database('users_register');
 								<div class="callout callout-type-2">
 									<div class="row zero-margin">
 										<div class="col-xs-1 zero-padding">
-											<img class="img-responsive callout-img" src="images/question_mark.jpg">
+											<img class="img-responsive callout-img" src="../images/question_mark.jpg">
 										</div>
 										
 										<div class="col-xs-11 zero-padding">
@@ -297,7 +297,7 @@ while($user = $users_returned->fetch_assoc()) {
 </div>
 
 
-<script src="js/index.js" type="text/javascript">
+<script src="../js/index.js" type="text/javascript">
 
 </script>
 		
